# Naiad-Clients

./: .gitignore  CMakeLists.txt
cmd/: CMakeLists.txt  main.cc
cmd/scripts/: init-cmake-ncmd  init-cmake-ncmd-win  make-ncmd-release
scripts/: init-cmake-nclients  init-cmake-nclients-win  init-cmake-nstudio  init-cmake-nstudio-win  init-cmake-nstudio-win-dbg  make-nclients-debug  make-nclients-dist  make-nclients-release  make-ncmd-debug
studio/: CMakeLists.txt  README.creole  t  untitled.ni  untitledlog
studio/Ngl/: CMakeLists.txt  Ngl.cc  Ngl.h  NglBBox.h  NglDrawUtils.h  NglError.h  NglExtensions.cc  NglExtensions.h  NglInclude.h  NglLight.h  NglMaterial.h  NglNonConstructible.h  NglNonCopyable.h  NglProxyPlane.cc  NglProxyPlane.h  NglShader.h  NglShaderAttrib.cc  NglShaderAttrib.h  NglShaderProgram.cc  NglShaderProgram.h  NglShaderUniform.h  NglShaderUniformBase.cc  NglShaderUniformBase.h  NglSlicing.cc  NglSlicing.h  NglState.h  NglSuperTile.cc  NglSuperTile.h  NglSuperTileLayout.cc  NglSuperTileLayout.h  NglTexture.h  NglTexture1D.cc  NglTexture1D.h  NglTexture2D.cc  NglTexture2D.h  NglTexture3D.cc  NglTexture3D.h  NglTextureBase.h  NglTextureTarget.h  NglTextureUtils.h  (+13 more)
studio/Scopes/: CMakeLists.txt
studio/Scopes/Body/: CMakeLists.txt  Camera-Scope.BodyOp  Ghost-Scope.BodyOp  Graph-Note.BodyOp  Iso-Scope.BodyOp  Mesh-Scope.BodyOp  Ortho-Camera-Scope.BodyOp  Particle-Scope.BodyOp  Streamline-Scope.BodyOp  Tile-Scope.BodyOp
studio/Scopes/Field/: CMakeLists.txt  Field-Iso-Scope.FieldOp  Field-Scalar-Scope.FieldOp  Field-Streamline-Scope.FieldOp  Field-Tile-Scope.FieldOp
studio/curve-test/: CMakeLists.txt  NsCurveCamera.cc  NsCurveCamera.h  NsCurveGrid.cc  NsCurveGrid.h  NsCurveItem.cc  NsCurveItem.h  NsCurveKeyframe.cc  NsCurveKeyframe.h  NsCurveScene.cc  NsCurveScene.h  NsCurveViewer.cc  NsCurveViewer.h  NsParameter.cc  NsParameter.h  main.cc
studio/docs/: CodingStyle.txt  CommandArchitecture.txt  Doxyfile  DoxygenLayout.xml  Ideas.txt  NamingConventions.txt
studio/em_gl/: em_glmat33.h  em_glmat33_algo.h  em_glmat44.h  em_glmat44_algo.h
studio/launcher/: CMakeLists.txt  NsConsole.h  NsProcess.h  main.cc
studio/scripts/: init-cmake-nstudio  init-cmake-nstudio-dbg.ps1  init-cmake-nstudio-rel.ps1  init-cmake-nstudio-win-rel  init-cmake-nstudio-win.ps1
studio/shaders/: CMakeLists.txt  big-blue.fs  big-blue.vs  channel-color.fs  channel-color.vs  false-color.fs  false-color.vs  field-scalar.fs  field-scalar.vs  ghost-pass1.fs  ghost-pass1.vs  ghost-pass2.fs  ghost-pass2.vs  ghost-pass3.fs  ghost-pass3.vs  ghost.fs  ghost.vs  image-plane.fs  image-plane.vs  iso.fs  iso.vs  maldives.fs  maldives.vs  mesh-lines.fs  mesh-lines.vs  mesh-solid-flat.fs  mesh-solid-flat.vs  mesh-solid-smooth.fs  mesh-solid-smooth.vs  mesh-solid-wireframe-flat.fs  mesh-solid-wireframe-flat.vs  mesh-solid-wireframe-smooth.fs  mesh-solid-wireframe-smooth.vs  mesh-wireframe.fs  mesh-wireframe.vs  tile-lines.fs  tile-lines.vs  tile-surface.fs  tile-surface.vs
studio/src/: #NsMainWindow.cc#  CMakeLists.txt  Ns3DBBox.h  Ns3DBody.cc  Ns3DBody.h  Ns3DBodyScope.h  Ns3DCacheObject.h  Ns3DCameraScope.h  Ns3DConstructionGridItem.cc  Ns3DConstructionGridItem.h  Ns3DField.cc  Ns3DField.h  Ns3DFieldIsoScope.h  Ns3DFieldScalarScope.h  Ns3DFieldScope.h  Ns3DFieldStreamlineScope.h  Ns3DFieldTileScope.h  Ns3DGhostScope.h  Ns3DGhostScopeUtils.h  Ns3DGraphicsItem.h  Ns3DIsoScope.h  Ns3DLocator.cc  Ns3DLocator.h  Ns3DManipulator.cc  Ns3DManipulator.h  Ns3DManipulatorComponent.h  Ns3DManipulatorPivot.h  Ns3DMeshScope.h  Ns3DOpAxisItem.cc  Ns3DOpAxisItem.h  Ns3DOpBoxItem.cc  Ns3DOpBoxItem.h  Ns3DOpClipBoxItem.cc  Ns3DOpClipBoxItem.h  Ns3DOpFrustumItem.cc  Ns3DOpFrustumItem.h  Ns3DOpImportTransformItem.cc  Ns3DOpImportTransformItem.h  Ns3DOpItem.cc  Ns3DOpItem.h  (+394 more)
studio/styles/: CMakeLists.txt  default-pref.xml  default-style.qss  nstudio-pro.qss
