#
# CMAKE project for Exotic Matter's Naiad Graph OpenGL utility library
#
# Copyright (c) 2009-2010 Exotic Matter AB.  All rights reserved.
#
#    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
#    "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,  INCLUDING,  BUT NOT
#    LIMITED TO,  THE IMPLIED WARRANTIES OF  MERCHANTABILITY AND FITNESS
#    FOR  A  PARTICULAR  PURPOSE  ARE DISCLAIMED.  IN NO EVENT SHALL THE
#    COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
#    INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
#    BUT  NOT LIMITED TO,  PROCUREMENT OF SUBSTITUTE GOODS  OR  SERVICES;
#    LOSS OF USE,  DATA,  OR PROFITS; OR BUSINESS INTERRUPTION)  HOWEVER
#    CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,  STRICT
#    LIABILITY,  OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)  ARISING IN
#    ANY  WAY OUT OF THE USE OF  THIS SOFTWARE,  EVEN IF ADVISED OF  THE
#    POSSIBILITY OF SUCH DAMAGE.
#

project               (NSTUDIO_LAUNCHER)

find_package          (Qt4 4.6 COMPONENTS QtCore QtGui REQUIRED)

include               (${QT_USE_FILE})
include_directories   (.)
link_directories      ()

file(GLOB_RECURSE NSTUDIO_LAUNCHER_HDRS "*.h")
file(GLOB_RECURSE NSTUDIO_LAUNCHER_SRCS "*.cc")

qt4_wrap_cpp (NSTUDIO_LAUNCHER_MOC_SRCS ${NSTUDIO_LAUNCHER_HDRS})
source_group("moc" FILES ${NSTUDIO_LAUNCHER_MOC_SRCS})

add_executable(nstudio 
               ${NSTUDIO_LAUNCHER_SRCS} 
               ${NSTUDIO_LAUNCHER_HDRS}
               ${NSTUDIO_LAUNCHER_MOC_SRCS} 
               ${NSTUDIO_LAUNCHER_QRC_SRCS})

if ("$ENV{EM_COMPILER}" STREQUAL "intel")
target_link_libraries(nstudio -static-intel ${QT_LIBRARIES} iomp5 pthread)
endif ("$ENV{EM_COMPILER}" STREQUAL "intel")

if ("$ENV{EM_COMPILER}" STREQUAL "gcc")
target_link_libraries (nstudio ${QT_LIBRARIES})
endif ("$ENV{EM_COMPILER}" STREQUAL "gcc")

if ("$ENV{EM_COMPILER}" STREQUAL "MSVC")
target_link_libraries(nstudio ${QT_LIBRARIES})
endif ("$ENV{EM_COMPILER}" STREQUAL "MSVC")

install(TARGETS nstudio DESTINATION clients/nstudio/bin)

